<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrialActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/previous"
            android:scaleType="fitCenter"
            android:src="@drawable/left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="30dp"
            android:layout_margin="30dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                android:id="@+id/textPanjang"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/length"
                android:inputType="text"
                android:padding="10dp" />

            <EditText
                android:id="@+id/textLebar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/width"
                android:inputType="text"
                android:padding="10dp" />

            <EditText
                android:id="@+id/textBahan"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/material"
                android:inputType="text"
                android:padding="10dp" />

            <EditText
                android:id="@+id/textHargaBahan"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/price"
                android:inputType="text"
                android:padding="10dp" />

            <TextView
                android:id="@+id/answerArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layout_constraintVertical_bias="0.738" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="countLuas"
                android:text="Button" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>